erDiagram
    ACCOUNT {
        uuid account_id PK
        bigint version
        varchar(3) currency_code
        varchar(10) account_status
        decimal(19_2) available_balance
        decimal(19_2) reserved_balance
        timestamptz created_at
        timestamptz updated_at
    }

    AUTHORISATION {
        uuid authorisation_id PK
        bigint version
        uuid account_id FK
        varchar(128) merchant_reference
        decimal(19_2) amount
        varchar(3) currency_code
        varchar(10) authorisation_status
        timestamptz created_at
        timestamptz updated_at
    }

    AUTHORISATION_EVENT {
        uuid event_id PK
        uuid authorisation_id FK
        uuid account_id FK
        varchar(40) event_type
        varchar(30) idempotency_key
        decimal(19_2) amount
        varchar(3) currency_code
        varchar(30) reason_code
        uuid correlation_id
        timestamptz created_at
    }

    OUTBOX_EVENT {
        uuid event_id PK
        bigint version
        varchar(20) aggregate_type
        uuid aggregate_id
        varchar(30) event_type
        jsonb payload
        varchar(30) status
        int retry_count
        varchar(100) last_error
        timestamptz created_at
        timestamptz published_at
        timestamptz next_attempt_at
        varchar(30) idempotency_key
        uuid correlation_id
        varchar(55) trace_parent
        timestamptz claimed_at
        timestamptz claim_until
    }

    ACCOUNT ||--o{ AUTHORISATION: owns
    ACCOUNT ||--o{ AUTHORISATION_EVENT: emits
    AUTHORISATION ||--o{ AUTHORISATION_EVENT: has
    AUTHORISATION ||--o{ OUTBOX_EVENT: aggregate_id_logical

